# railway-scan-yolo

./: .gitignore  README.md
configs/: railway_obstacle_person.data.yaml.example
docs/: ROS2_YOLO_CAMERA_DEMO_REQUIREMENTS.md  TRAINING_RESULT_GUIDE.md
docs/uav_inspection_literature/: README.md  literature_index.csv  无人机巡检文献分析.md
docs/uav_inspection_literature/sources/: pdf_metadata.csv
ros2_ws/src/inspection_yolo_demo/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/inspection_yolo_demo/inspection_yolo_demo/: drone_status_node.py  ground_station_monitor.py  yolo_detection_node.py
ros2_ws/src/inspection_yolo_demo/launch/: demo.launch.py
scripts/: add_worker_prefix.py  check_yolo_dataset_integrity.py  generate_rail_break_box_preview.py  merge_obstacle_and_person_yolo.py  open_yolo_env.bat  prepare_railway_obstacle_yolo.py  remap_person_labels_to_obstacle_person.py  rename_railway_dataset_by_similarity.ps1  resume_obstacle_person.bat  train_obstacle_person.bat
weights/: README.md
